# takton

./: .gitattributes  .gitignore  BUG_REPORT.md  BUG_REVIEW_API_ROUTES.md  CHANGELOG-v3.0-week1.md  DESIGN-files-workspace-v3.1.md  PACKAGING.md  PLAN-bridge-p0p1.md  PRD-v2.0.md  README.md  SUBAGENT_CLUSTER_DESIGN.md  WORKPLAN-v3.0.md  __init__.py  database.py  docker-compose.yml  main.py  next.config.ts  package-lock.json  package.json  prepare-win-python.js  pyproject.toml  rebuild-takton-asar.README.md  rebuild-takton-asar.sh  requirements.txt  run-dev-e2e.ps1  start-backend.sh  start.py  start_services.py
backend/: .env.example  BUG_REVIEW_REPORT.md  build_frontend.py  cli.py  main.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  static_frontend.py
backend/agent/: checkpoint.py  cluster_aggregator.py  cluster_executor.py  cluster_protocol.py  command_classifier.py  completion_gate.py  context.py  context_compress.py  context_engine.py  context_pipeline.py  decisive.py  file_checkpoint.py  file_context.py  goal_state.py  iteration_budget.py  loop.py  pack_catalog.py  resume.py  robust.py  system_layers.py  system_prompt.py  token_meter.py  tool_hooks.py  tool_policy.py  tool_result_contract.py  tool_status.py  turn_retry.py  workspace_contract.py
backend/api/: dependencies.py  websocket.py
backend/content/: __init__.py  product_handbook.py
backend/core/: audit.py  config.py  encryption.py  exceptions.py  logging_config.py  model_catalog.py  model_gen_params.py  model_limits.py  net_safety.py  rate_limit.py  runtime_settings.py  security_headers.py  simple_cors.py  timezone.py  unit_of_work.py
backend/evolution/: README.md  __init__.py  config.py  curator.py  evaluator.py  gates.py  improver.py  manager.py  observer.py  runtime_tools.py  skill_sync.py  store.py
backend/mcp_hub/: client.py  service.py
backend/models/: __init__.py  base.py  channel.py  context.py  cron_execution_log.py  desktop_permission.py  entity.py  knowledge.py  message.py  notification.py  session.py  setting.py  tool.py  trace.py  wiki.py  workflow.py  workflow_execution.py
backend/repositories/: __init__.py  base.py  cron_repo.py  desktop_permission_repo.py  entity_repo.py  knowledge_repo.py  message_repo.py  session_repo.py  setting_repo.py  sub_agent_repo.py  task_repo.py  trace_repo.py  user_repo.py  webhook_repo.py  wiki_repo.py  workflow_execution_repo.py
backend/schemas/: agent_profile.py  cron_hook.py  device.py  knowledge.py  mcp.py  mcp_store.py  notification.py  skill.py  skill_store.py  sub_agent.py  task.py  webhook.py  wiki.py  workflow.py  workflow_execution.py  ws.py
backend/services/: channel_gateway.py  confirm_manager.py  cron_scheduler.py  endpoint_probe.py  entity_service.py  sft_collector.py  slash_commands.py
backend/skills/: dynamic.py  registry.py
backend/static/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
takton-code/: .gitignore  README.md  config.example.toml  pyproject.toml
(+829 files in other folders)
