[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "takton"
version = "0.2.6"
description = "Takton - 个人专属 AI Agent 终端（前后端一体）"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "wuyw", email = "wuyw@takton.dev" }]
dependencies = [
  "fastapi==0.139.0",
  "uvicorn[standard]==0.50.2",
  "pydantic==2.13.4",
  "pydantic-settings>=2.2.1",
  "email-validator>=2.2.0",
  "sqlalchemy[asyncio]==2.0.36",
  "aiosqlite==0.21.0",
  "python-jose[cryptography]==3.3.0",
  "cryptography>=42.0.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.2.0",
  "python-multipart==0.0.20",
  "httpx==0.28.1",
  "aiohttp==3.14.1",
  "websockets==15.0.1",
  "python-dotenv==1.0.1",
  "pyyaml==6.0.2",
  "jinja2==3.1.5",
  "qdrant-client==1.12.1",
  "mcp>=1.12.0",
]

[project.optional-dependencies]
dev = [
  "asyncpg==0.30.0",
  "pytest==8.3.5",
  "pytest-asyncio==0.24.0",
  "asgi-lifespan==2.1.0",
]
postgres = ["asyncpg==0.30.0"]

[project.scripts]
takton = "backend.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.setuptools.package-data]
backend = ["static/**/*", "static/**/.*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
addopts = "-ra -q"
