[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "takton-code"
version = "0.1.0"
description = "Takton Code — repo-native coding agent (independent; desktop bridge ready)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Takton" }]
dependencies = [
  "httpx>=0.27",
  "rich>=13.7",
  "typer>=0.12",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "aiosqlite>=0.20",
  "gitpython>=3.1",
  "prompt-toolkit>=3.0",
  "textual>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
takton-code = "takton_code.cli:app"
tkc = "takton_code.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/takton_code"]

[tool.hatch.build.targets.wheel.force-include]
"src/takton_code" = "takton_code"

[tool.hatch.build.targets.sdist]
include = ["src/takton_code", "README.md", "pyproject.toml", "tests", "smoke", "fixtures"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = true
